using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ЛР6
{
    class Sensor: SmartHouseController
    {

        public override int Value { get; set; }

        public Sensor()
        {

        }
    }
}
