using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ЛР6
{
    abstract class SmartHouseController
    {
       public abstract int Value { get; set; }
    }
}
